--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <hr>
 
-  <h3><a href="Hobbies.html">My Hobbies</a></h3>
+  <h3><a href="hobbies.html">My Hobbies</a></h3>
   <h3><a href="contact-me.html">Contact</a></h3>
 
 
