Update to hobbies

--- a/hobbies.html
+++ b/hobbies.html
@@ -7,9 +7,10 @@
   <body>
     <h3>Hobbies</h3>
     <ol>
-      <li>Road Bikes</li>
-      <li>Music</li>
+      <li><a href="bikes.html">Road Bikes</a></li>
+      <li><a href="music.html">Music</a></li>
       <li>Coding</li>
     </ol>
   </body>
 </html>
+
