--- a/bikes.html
+++ b/bikes.html
@@ -9,7 +9,7 @@
     <h3>Canyon CF SL  7</h3>
     <img src="images/bikes/Canyon.png" alt="Canyon">
     <h3>Cervélo R3</h3>
-    <img src="images/bikes/Cervélo.png" alt="Cervélo">
+    <img src="images/bikes/Cervélo.png" alt="Cervélo">
     <h3>Focus Summit</h3>
     <img src="images/bikes/Focus.png" alt="Focus">
 
